# peak_mmul

./: .gitignore  Makefile  README.md
custom_ops/: Makefile  Map_Report.csv  PEAK_PERFORMANCE_REPORT.md  README.md  sol.db
custom_ops/aie/: graph.cpp  graph.h  peak_mmul_kernel.cc
custom_ops/app/: main.cc
custom_ops/config/: package.cfg  system.cfg
custom_ops/include/: kernels.h  peak_config.h
custom_ops/pl_kernels/: mm2s.cfg  mm2s.cpp  s2mm.cfg  s2mm.cpp
custom_ops/pl_kernels/mm2s/: mm2s.hlscompile_summary
custom_ops/pl_kernels/mm2s/hls/: config.cmdline  hls_data.json
custom_ops/pl_kernels/s2mm/: s2mm.hlscompile_summary
custom_ops/pl_kernels/s2mm/hls/: config.cmdline  hls_data.json
custom_ops/pl_kernels/s2mm/hls/impl/ip/drivers/s2mm_v1_0/src/: CMakeLists.txt
peak_bf16/: README.md
peak_bf16/full_tiles/aie_stay_reg/: Makefile  README.md  run_script.sh
peak_bf16/full_tiles/aie_stay_reg_benchmark/: Makefile  README.md  run_script.sh
peak_bf16/multi_tiles/pack_g4_harness/: Makefile  README.md
peak_bf16/single_tile/: README.md
peak_bf16/single_tile/aie_conf_buf/: Makefile  Map_Report.csv  README.md  sol.db
peak_bf16/single_tile/aie_conf_buf_harness/: Makefile
peak_bf16/single_tile/aie_stay_reg/: Makefile  README.md
peak_int8/: Makefile  build_and_deploy.sh  run_script.sh
peak_int8/aie/: graph.cpp  graph.h  peak_int8_kernel.cc
peak_int8/app/: main.cc
peak_int8/config/: package.cfg  system.cfg
peak_int8/include/: peak_int8_config.h
peak_int8/single_tile/aie_stay_reg/: Makefile  README.md  run_script.sh
(+385 files in other folders)
